--- a/search.html
+++ b/search.html
@@ -115,14 +115,14 @@
                 title: "सूरदास का पद",
                 author: "सूरदास",
                 language: "ब्रज",
-                url: "/kavya-mimamsa/poems/sample.html",
+                url: "/kavya-mimamsa/poems/sample",
                 content: "मैया मोरी मैं नहीं माखन खायो भोलो मुख देखि"
             },
             {
                 title: "रामचरितमानस से चौपाई",
                 author: "तुलसीदास",
                 language: "अवधी",
-                url: "/kavya-mimamsa/poems/tulsidas-chaupai.html",
+                url: "/kavya-mimamsa/poems/tulsidas-chaupai",
                 content: "मन वचन कर्म सुचि मोरे राम कृपा"
             }
             // Add more poems here as you create them
